fix page content to not be hidden by header

--- a/blocks/content.css
+++ b/blocks/content.css
@@ -2,4 +2,5 @@
   font-family: Inter, Arial, sans-serif;
   background-color: #fffff0;
   padding: 15px 200px 15px;
+  margin: 150px 0 0 0;
 }
